Quick fixes